--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
 {% block title %}
     Index
 {% endblock title %}
-    
+  
     
 
 {% block bodycontent %}
 
     <marquee>
-       <h3> Web Development Project </h3>
+       <h1> Web Development Project </h1>
     </marquee>
 
     <div id="whoareyou">
@@ -33,13 +33,10 @@
         <br><br>
     </div>
 
-    <br><br><br><br><br><br><br>
-    <button>
-    hello
-    </button> <br>
-    <img src="https://thumbs.gfycat.com/NippyExhaustedAsiaticmouflon-max-1mb.gif" alt="a nice image">
-
+    <br><br><br><br><br>
+    <!--<br><br><br><br><br><br><br><button>hello</button> <br><img src="https://thumbs.gfycat.com/NippyExhaustedAsiaticmouflon-max-1mb.gif" alt="a nice image"> -->
     
+    polls app add
 
     
 {% endblock bodycontent %}
